--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -5,95 +5,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Day 3 Cheat Sheet — Raw to Reset</title>
 <style>
-  :root {
-    --brand:#FC8B73;        /* coral */
-    --ink:#0D0D0E;          /* near-black */
-    --card:#FFFFFF;
-    --muted:#666;
-    --soft:#FFE5DE;         /* very light coral */
-    --line:#ffd7cc;
-    --radius:18px;
+  :root{
+    --brand:#FC8B73; --ink:#0D0D0E; --card:#FFFFFF; --muted:#666;
+    --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
   }
-  html,body {
-    margin:0;
-    padding:0;
-    background:#F7F7F7;
-    color:var(--ink);
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-  }
-  .wrap {
-    max-width:900px;
-    margin:28px auto 64px;
-    padding:0 18px;
-  }
-  .brand {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    margin-bottom:12px;
-  }
-  .brand img {
-    width:clamp(80px,9vw,140px);
-    height:auto;
-    display:block;
-    filter:drop-shadow(0 4px 14px rgba(0,0,0,.08));
-  }
-  header {
-    background:var(--brand);
-    color:#fff;
-    border-radius:var(--radius);
-    padding:22px;
-    text-align:center;
-    box-shadow:0 10px 30px rgba(0,0,0,.10);
-  }
-  header h1 {
-    margin:0;
-    font-size:clamp(22px,4.2vw,36px);
-    line-height:1.15;
-  }
-  .sub {
-    opacity:.95;
-    margin-top:6px;
-  }
+  html,body{margin:0;padding:0;background:#F7F7F7;color:var(--ink);
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+  .wrap{max-width:900px;margin:28px auto 64px;padding:0 18px}
+  .brand{display:flex;justify-content:center;align-items:center;margin-bottom:12px}
+  .brand img{width:clamp(88px,9vw,140px);height:auto;display:block;filter:drop-shadow(0 4px 14px rgba(0,0,0,.08))}
+  header{background:var(--brand);color:#fff;border-radius:var(--radius);padding:22px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.10)}
+  header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
+  .sub{opacity:.95;margin-top:6px}
 
-  .hero {
-    margin-top:14px;
-    border-radius:var(--radius);
-    overflow:hidden;
-    box-shadow:0 8px 22px rgba(0,0,0,.06);
-  }
-  .hero img {
-    display:block;
-    width:100%;
-    height:auto;
-  }
+.hero {
+  margin-top: 14px;
+  border-radius: var(--radius);
+  overflow: hidden;
+  box-shadow: 0 8px 22px rgba(0,0,0,.06);
+}
+.hero img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
 
-  .card {
-    background:var(--card);
-    border-radius:var(--radius);
-    padding:18px;
-    margin-top:16px;
-    box-shadow:0 8px 22px rgba(0,0,0,.06);
-    border:1px solid var(--line);
-  }
-  .card h2 {
-    margin:0 0 10px;
-    font-size:1.2rem;
-    display:flex;
-    gap:.5rem;
-    align-items:center;
-  }
-  .tone {
-    background:#FFF7F4;
-    border-left:6px solid var(--brand);
-  }
-  ul {
-    margin:8px 0 0 20px;
-  }
-  li {
-    margin:.25rem 0;
-  }
-  .why {
+  .card{background:var(--card);border-radius:var(--radius);padding:18px;margin-top:16px;
+    box-shadow:0 8px 22px rgba(0,0,0,.06);border:1px solid var(--line)}
+  .card h2{margin:0 0 10px;font-size:1.2rem;display:flex;gap:.5rem;align-items:center}
+  .tone{background:var(--soft);border-left:6px solid var(--brand)}
+  ul{margin:8px 0 0 20px} li{margin:.25rem 0}
+
+  .why, .card em.why {
     display:block;
     color:#6b2f23;
     opacity:0.85;
@@ -102,167 +45,114 @@
     font-style:italic;
   }
 
-  .cta-row {
-    display:flex;
-    flex-wrap:wrap;
-    gap:12px;
-    justify-content:center;
-    margin-top:18px;
-  }
-  .btn {
-    display:inline-block;
-    background:var(--brand);
-    color:#fff;
-    text-decoration:none;
-    padding:12px 18px;
-    border-radius:999px;
-    font-weight:700;
-    cursor:pointer;
-    transition:filter .2s ease;
-  }
-  .btn:hover {
-    filter:brightness(1.05);
-  }
-  .btn.secondary {
-    background:#2D2D2D;
-  }
-  .btn.ghost {
-    background:#fff;
-    color:var(--brand);
-    border:2px solid var(--brand);
-  }
-  .btn.locked {
-    background:#fce3dd;
-    color:#888;
-    border-color:#f7b4a3;
-    cursor:not-allowed;
-  }
-  .btn.locked:hover {
-    background:#fce3dd;
-    color:#888;
-  }
+  .cta-row{display:flex;flex-wrap:wrap;gap:12px;justify-content:center;margin-top:18px}
+  .btn{display:inline-block;background:var(--brand);color:#fff;text-decoration:none;
+    padding:12px 18px;border-radius:999px;font-weight:700;cursor:pointer}
+  .btn.secondary{background:#2D2D2D}
+  .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
+  .btn.locked{background:#fce3dd;color:#888;border-color:#f7b4a3;cursor:not-allowed}
+  .btn.locked:hover{background:#fce3dd;color:#888}
 
-  footer {
-    text-align:center;
-    font-size:1.05rem;
-    color:#0D0D0E;
-    margin-top:48px;
-    margin-bottom:60px;
-    font-weight:600;
-    line-height:1.7;
-    opacity:0;
-    animation:slideUpFade 1.4s ease-out .3s forwards;
-  }
-  footer strong {
-    color:var(--brand);
-  }
-  footer:hover {
-    color:var(--brand);
-    transform:translateY(-2px);
-    transition:all .3s ease;
-  }
-  @keyframes slideUpFade {
-    0% {opacity:0; transform:translateY(30px);}
-    100% {opacity:1; transform:translateY(0);}
-  }
+  footer{text-align:center;font-size:1.1rem;color:#0D0D0E;margin-top:48px;margin-bottom:60px;
+    font-weight:600;line-height:1.7;animation:slideUpFade 1.4s ease-out 0.3s forwards;opacity:0;}
+  footer strong{color:#FC8B73;}
+  footer:hover{color:#FC8B73;transform:translateY(-2px);transition:all 0.3s ease;}
+  @keyframes slideUpFade {0%{opacity:0;transform:translateY(30px);}100%{opacity:1;transform:translateY(0);}}
 
   @media print {
-    @page {size:A4; margin:18mm;}
-    .cta-row, .brand img {display:none !important;}
-    section.card {box-shadow:none !important; border:1px solid #e8e8e8 !important; border-radius:8px !important;}
-    header {background:#fff !important; color:#000 !important; border:1px solid #e8e8e8 !important;}
-    a {color:#000 !important; text-decoration:underline !important;}
-    html,body {background:#fff !important;}
+    @page {size:A4;margin:18mm;}
+    .cta-row, .muted, .brand img {display:none !important;}
+    section.card{box-shadow:none !important;border:1px solid #e8e8e8 !important;border-radius:8px !important;}
+    header{background:#fff !important;color:#000 !important;border:1px solid #e8e8e8 !important;}
+    a{color:#000 !important;text-decoration:underline !important;}
+    html,body{background:#fff !important;}
   }
 </style>
 </head>
-
 <body>
-<div class="wrap">
+  <div class="wrap">
 
-  <div class="brand">
-    <img src="logo.png" alt="Artificial Momentum logo">
+    <div class="brand">
+      <img src="logo.png" alt="Artificial Momentum logo">
+    </div>
+
+    <header>
+      <h1>Day 3 — Bloat, Burnout, and the Bullsh*t We’ve Normalized</h1>
+      <div class="sub">You’re not lazy — you need fuel.</div>
+    </header>
+
+    <figure class="hero">
+      <img src="healthy-bowl.jpg" alt="Two nourishing bowls with protein, greens, and grains">
+    </figure>
+
+    <section class="card">
+      <h2>🧭 Cycle Lens</h2>
+      <ul>
+        <li>Late follicular → luteal transition = appetite/sugar swings spike. It’s right after ovulation: you’re either prepping to bleed or your body’s prepping to grow a baby.</li>
+        <li>Misfits magnify — you’re not suddenly “moody,” you’re just less willing to swallow what annoys you. The rest of the month it’s applauded as emotional maturity. Today it gets mislabelled PMS when you finally snap at the same tired joke. Well… hello 🙃</li>
+      </ul>
+    </section>
+
+    <section class="card tone">
+      <h2>🌙 Quick Win</h2>
+      <p><strong>Mid-morning anchor:</strong> 20–30 g protein + fiber + minerals. This steadies blood sugar, reduces cravings, and brings your brain back into usable focus.</p>
+    </section>
+
+    <section class="card">
+      <h2>🧪 Signals to Notice</h2>
+      <ul>
+        <li>Motivation dips or irritability? Not laziness — <strong>it’s chemistry shifting gears.</strong><em class="why">→ Estrogen is tapering off, and progesterone is rising. That changes how your body uses glucose and neurotransmitters — so your usual pace might suddenly feel “off.”</em></li>
+        <li>Afternoon crash or “can’t focus” moments — your nervous system is asking for fuel, not guilt.<em class="why">→ When cortisol and glucose misalign, brain fog and cravings are just biochemical messages. Try protein + minerals mid-morning to reset stability.</em></li>
+        <li>Feeling like your body’s “shoulds” are arguing with your energy? You’re not failing — you’re recalibrating.<em class="why">→ This phase thrives on rhythm, not pressure. Backing off a sprint here means smoother hormones later.</em></li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>🧰 Support Moves</h2>
+      <ul>
+        <li><strong>Front-load protein + fiber</strong> — 20–30 g with breakfast steadies blood sugar and mood.</li>
+        <li><strong>Move to spark, not drain</strong> — a brisk walk or short weights session boosts dopamine without tipping cortisol.</li>
+        <li><strong>Hydrate steadily</strong> — water + minerals keep estrogen’s energy lift smooth instead of spiky.</li>
+      </ul>
+      <em class="why">→ Consistency fuels clarity. You’re teaching your brain what steady feels like again.</em>
+    </section>
+
+    <section class="card">
+      <h2>💭 Reflection Prompt</h2>
+      <p>What felt easier to start today? Where did focus flow without forcing it?</p>
+      <em class="why">→ Celebrate stability — this is your brain catching its rhythm.</em>
+    </section>
+
+    <section class="card">
+      <h2>🧠 Why (mini-physiology)</h2>
+      <p class="tiny">
+        As estrogen declines and progesterone takes the lead, your brain’s glucose use slows slightly — especially in the prefrontal cortex (focus, drive, planning). The body redirects resources toward repair and progesterone’s calming work.
+      </p>
+      <em class="why">→ Supporting this phase with balanced meals and recovery movement keeps your nervous system steady and stops mid-cycle crashes.</em>
+    </section>
+
+    <div class="cta-row">
+      <a class="btn" href="day3-video.html">Watch Today’s Video</a>
+      <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 4 Cheat Sheet →</a>
+      <a class="btn ghost" href="#">🍽 Recipe of the Day</a>
+      <a class="btn ghost" href="#">✒️ Journal Page</a>
+      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+      <a class="btn ghost" id="print-pdf">Download PDF</a>
+    </div>
+
+    <footer>
+      💬 What’s landing for you so far? Note your insights — we’ll unpack them together in the live wrap-up Zoom call at the end of the reset.
+    </footer>
+
   </div>
-
-  <header>
-    <h1>Day 3 — Bloat, Burnout, and the Bullsh*t We’ve Normalized</h1>
-    <div class="sub">You’re not lazy — you need fuel.</div>
-  </header>
-
-  <figure class="hero">
-    <img src="healthy-bowl.jpg" alt="Two nourishing bowls with protein, greens, and grains">
-  </figure>
-
-  <section class="card">
-    <h2>🧭 Cycle Lens</h2>
-    <ul>
-      <li>Late follicular → luteal transition = appetite/sugar swings spike. It’s right after ovulation: you’re either prepping to bleed or your body’s prepping to grow a baby.</li>
-      <li>Misfits magnify — you’re not suddenly “moody,” you’re just less willing to swallow what annoys you. The rest of the month it’s applauded as emotional maturity. Today it gets mislabelled PMS when you finally snap at the same tired joke. Well… hello 🙃</li>
-    </ul>
-  </section>
-
-  <section class="card tone">
-    <h2>🌙 Quick Win</h2>
-    <p><strong>Mid-morning anchor:</strong> 20–30 g protein + fiber + minerals. This steadies blood sugar, reduces cravings, and brings your brain back into usable focus.</p>
-  </section>
-
-  <section class="card">
-    <h2>🧪 Signals to Notice</h2>
-    <ul>
-      <li>Motivation dips or irritability? Not laziness — <strong>it’s chemistry shifting gears.</strong>
-        <span class="why">→ Estrogen is tapering off, and progesterone is rising. That changes how your body uses glucose and neurotransmitters — so your usual pace might suddenly feel “off.”</span>
-      </li>
-      <li>Afternoon crash or “can’t focus” moments — your nervous system is asking for fuel, not guilt.
-        <span class="why">→ When cortisol and glucose misalign, brain fog and cravings are just biochemical messages. Try protein + minerals mid-morning to reset stability.</span>
-      </li>
-      <li>Feeling like your body’s “shoulds” are arguing with your energy? You’re not failing — you’re recalibrating.
-        <span class="why">→ This phase thrives on rhythm, not pressure. Backing off a sprint here means smoother hormones later.</span>
-      </li>
-    </ul>
-  </section>
-
-  <section class="card">
-    <h2>💪 Support Moves</h2>
-    <ul>
-      <li><strong>Front-load protein + fiber</strong> — 20–30 g with breakfast steadies blood sugar and mood.</li>
-      <li><strong>Move to spark, not drain</strong> — a brisk walk or short weights session boosts dopamine without tipping cortisol.</li>
-      <li><strong>Hydrate steadily</strong> — water + minerals keep estrogen’s energy lift smooth instead of spiky.</li>
-    </ul>
-    <span class="why">→ Consistency fuels clarity. You’re teaching your brain what steady feels like again.</span>
-  </section>
-
-  <section class="card">
-    <h2>💭 Reflection Prompt</h2>
-    <p>What felt easier to start today? Where did focus flow without forcing it?</p>
-    <span class="why">→ Celebrate stability — this is your brain catching its rhythm.</span>
-  </section>
-
-  <section class="card">
-    <h2>🧠 Why (mini-physiology)</h2>
-    <p>As estrogen declines and progesterone takes the lead, your brain’s glucose use slows slightly — especially in the prefrontal cortex (focus, drive, planning). The body redirects resources toward repair and progesterone’s calming work.</p>
-    <span class="why">→ Supporting this phase with balanced meals and recovery movement keeps your nervous system steady and stops mid-cycle crashes. Nourishment over perfection — your hormones are shifting from creation to conservation mode.</span>
-  </section>
-
-  <div class="cta-row">
-    <a class="btn" href="day3-video.html">Watch Today’s Video</a>
-    <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 4 Cheat Sheet →</a>
-    <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-    <a class="btn ghost" id="print-pdf">Download PDF</a>
-  </div>
-
-  <footer>
-    💬 What’s landing for you so far? Note your insights — we’ll unpack them together in the live wrap-up Zoom call at the end of the reset.
-  </footer>
-
-</div>
 
 <script>
-(function(){
-  var btn=document.getElementById('print-pdf');
-  if(btn)btn.addEventListener('click',function(e){
-    e.preventDefault();window.print();
-  });
-})();
+  (function(){
+    var btn=document.getElementById('print-pdf');
+    if(btn)btn.addEventListener('click',function(e){
+      e.preventDefault();window.print();
+    });
+  })();
 </script>
 </body>
 </html>
