--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -84,7 +84,7 @@
   </header>
 
   <figure class="hero">
-    <img src="morning-reset-bowl.jpg" alt="Comforting bowl with oats, berries, and nut butter">
+    <img src="morning-reset-bowl.jpg" alt="day1-recipe.html">
   </figure>
 
   <section class="card tone">
