--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -27,14 +27,32 @@
   header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
   .sub{opacity:.95;margin-top:6px;font-size:1.05rem}
 
-  .hero img {
+header {
+  background: var(--brand);
+  color: #fff;
+  border-radius: var(--radius);
+  padding: 20px 18px 26px;
+  text-align: center;
+  box-shadow: 0 8px 24px rgba(0,0,0,.08);
+  margin-bottom: 18px; /* added breathing room below the coral header */
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  margin-top: 8px;
+  margin-bottom: 18px; /* new: space before the next card */
+}
+
+.hero img {
   display: block;
   width: 100%;
-  max-width: 540px;
+  max-width: 460px; /* slightly smaller for balance */
   margin: 0 auto;
   height: auto;
-  border-radius: 16px;
+  border-radius: 18px;
   object-fit: cover;
+  box-shadow: 0 6px 18px rgba(0,0,0,.06); /* softer shadow */
 }
 
 
