--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -26,6 +26,8 @@
     padding:24px 18px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.1)}
   header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
   .sub{opacity:.95;margin-top:6px;font-size:1.05rem}
+  background: linear-gradient(160deg, #FC8B73 0%, #fda88f 100%);
+
 
 header {
   background: var(--brand);
