--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -27,36 +27,34 @@
   header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
   .sub{opacity:.95;margin-top:6px;font-size:1.05rem}
 
-
 header {
-  background: var(--brand);
+  background: linear-gradient(160deg, #FC8B73 0%, #fda88f 100%);
   color: #fff;
   border-radius: var(--radius);
-  padding: 20px 18px 26px;
+  padding: 22px 20px 28px;
   text-align: center;
-  box-shadow: 0 8px 24px rgba(0,0,0,.08);
-  margin-bottom: 18px; /* added breathing room below the coral header */
-  background: linear-gradient(160deg, #FC8B73 0%, #fda88f 100%);
-
+  box-shadow: 0 6px 24px rgba(0,0,0,.08);
+  margin-bottom: 24px; /* more breathing room below coral block */
 }
 
 .hero {
   display: flex;
   justify-content: center;
-  margin-top: 8px;
-  margin-bottom: 18px; /* new: space before the next card */
+  margin-top: 10px;
+  margin-bottom: 24px;
 }
 
 .hero img {
   display: block;
   width: 100%;
-  max-width: 460px; /* slightly smaller for balance */
-  margin: 0 auto;
+  max-width: 460px;
   height: auto;
+  margin: 0 auto;
   border-radius: 18px;
   object-fit: cover;
-  box-shadow: 0 6px 18px rgba(0,0,0,.06); /* softer shadow */
+  box-shadow: 0 5px 18px rgba(0,0,0,.05);
 }
+
 
 
   /* Cards */
