Header important note

--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -28,13 +28,14 @@
   .sub{opacity:.95;margin-top:6px;font-size:1.05rem}
 
 header {
-  background: linear-gradient(160deg, #FC8B73 0%, #fda88f 100%);
+  background: linear-gradient(160deg, #FC8B73 0%, #fda88f 100%) !important;
   color: #fff;
   border-radius: var(--radius);
   padding: 22px 20px 28px;
   text-align: center;
   box-shadow: 0 6px 24px rgba(0,0,0,.08);
   margin-bottom: 24px; /* more breathing room below coral block */
+  
 }
 
 .hero {
