--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -18,37 +18,70 @@
 
   .wrap{max-width:900px;margin:28px auto 64px;padding:0 18px}
 
+  .brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 18px;
+}
+
+.brand img {
+  width: clamp(90px, 8vw, 120px);
+  height: auto;
+  display: block;
+  filter: drop-shadow(0 3px 10px rgba(0,0,0,.08));
+  transition: transform 0.3s ease;
+}
+.brand img:hover {
+  transform: scale(1.04);
+}
 
 header {
-  background: linear-gradient(160deg, #FC8B73 0%, #fda88f 100%) !important;
+  background: linear-gradient(165deg, #FD8369 0%, #FEB299 100%) !important;
   color: #fff;
   border-radius: var(--radius);
-  padding: 22px 20px 28px;
+  padding: 26px 20px 28px;
   text-align: center;
-  box-shadow: 0 6px 24px rgba(0,0,0,.08);
-  margin-bottom: 24px; /* more breathing room below coral block */
-  
+  box-shadow: 0 8px 24px rgba(0,0,0,.08);
+  margin-bottom: 32px;
+}
+
+header h1 {
+  margin: 0;
+  font-size: clamp(22px, 4vw, 34px);
+  line-height: 1.18;
+  font-weight: 700;
+}
+
+header .sub {
+  margin-top: 6px;
+  opacity: 0.95;
+  font-size: 1.05rem;
+  font-weight: 500;
 }
 
 .hero {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
-  margin-bottom: 24px;
+  margin: 20px auto 36px;
 }
 
 .hero img {
   display: block;
   width: 100%;
-  max-width: 460px;
+  max-width: 420px;
   height: auto;
   margin: 0 auto;
-  border-radius: 18px;
+  border-radius: 20px;
   object-fit: cover;
-  box-shadow: 0 5px 18px rgba(0,0,0,.05);
+  box-shadow: 0 8px 20px rgba(0,0,0,.06);
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
-
+.hero img:hover {
+  transform: scale(1.02);
+  box-shadow: 0 10px 26px rgba(0,0,0,.08);
+}
 
   /* Cards */
   .card{background:var(--card);border-radius:var(--radius);
