--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -58,12 +58,12 @@ header .sub {
   opacity: 0.95;
   font-size: 1.05rem;
   font-weight: 500;
-}
 
-.hero {
-  display: flex;
-  justify-content: center;
-  margin: 20px auto 36px;
+}
+.hero img {
+  display:block;
+  width:100%;
+  height:auto;
 }
 
 .hero img {
