--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -73,7 +73,7 @@ header .sub {
   aspect-ratio: 3 / 2; /* ensures the landscape shape */
   border-radius: 20px;
   object-fit: cover;
-  margin: 0 auto;
+ margin: 12px auto 24px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
   transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
