--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -69,14 +69,15 @@ header .sub {
 .hero img {
   display: block;
   width: 100%;
-  max-width: 900px; /* adjust width for your layout */
+  max-width: 900px;
   aspect-ratio: 3 / 2; /* ensures the landscape shape */
   border-radius: 20px;
   object-fit: cover;
- margin: 12px auto 24px;
+  margin: 12px auto 24px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
   transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
+
 
 
 .hero img:hover {
