--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -58,12 +58,17 @@ header .sub {
   opacity: 0.95;
   font-size: 1.05rem;
   font-weight: 500;
+  header {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
 }
 
 .hero {
   display: flex;
   justify-content: center;
-  margin: 5px auto 36px;
+  margin: 8px auto 36px;
 }
 
 
