Close top margin over Why

--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -83,6 +83,11 @@ header {
   transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
+.card.tone {
+  margin-top: 8px; /* closes the space between image and card */
+}
+
+
 
 
 .hero img:hover {
